crates/kula-core/tests/corpus/invalid/date-feb-30.kula
person bad name:"Bad" born:1925-02-30 gender:other
